maze.lessons.maze.island.IslandMaze.scala.code
def run1() {
  while (!(estSurBiscuit)) {
    keepHandOnSideWall()
    avance1()
  }
  prendBiscuit()
}


override def run() {
  var r = 0
  while (getX()!=0) {
    if (getDirection==Direction.SOUTH) {
      gauceh()
    }
   avance1()
  }
  run1()
 
}



def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()) {
   droite()
  }
}

def avance1() {
  if (estFaceMur()) {
    droite()
    
  } else {avance()}
}